--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 
-		<div id="lostpw-container" class="tab col-xl-9 col-md-10" style="display: none;">
+		<div id="lostpw-container" class="tab col-xl-9 col-md-10 nodisplay">
 			<div class="container p-0 m-0 h-100">
 				<div class="col-md-10 offset-md-1 wrapper lostpw-container">
 					<div class="box-lostpw">
