--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -1,6 +1,6 @@
 <% include partials/head %>
 
-<div class="container" style="position: sticky;">
+<div class="container sticky">
 	<div class="col-md-8 offset-md-2 mt-5">
 		<div class="row">
 			<form class="resetpw form-slider" id="resetpw" method="POST" action="/api/user/resetpw">
