--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -4,7 +4,7 @@
 <script src="/scripts/cart.js"></script>
     <div class="container container-single">
         <div id="container-shop" class="single-wrapper col-md-12">
-            <h1 class="single-title text-center mt-2 p-2" style="color: var(--light-shade)">Original Painting</h1>
+            <h1 class="single-title text-center mt-2 p-2 cwhite">Original Painting</h1>
             <div class="alert alert-info alert-static w-100 mb-3" role="alert">
 								We also sell great quality reproductions in all sizes and shapes, for more information check the <a href="/Catalog">Catalog</a>
 								</div>
