--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -6,7 +6,7 @@
 
 <div class="">
 	<form class="col-md-6 offset-md-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
-		<label class="search-label control-label" style="color: var(--light-shade) !important;">Filter by tags</label>
+		<label class="search-label control-label cwhite">Filter by tags</label>
 		<input type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
 		<span data-placeholder="Tags"></span>
 
@@ -39,7 +39,7 @@
 	</div>
 	<% if (!locals.error) { %>
 	<div class="col-md-6 offset-md-3 mb-3 mt-3">
-		<img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none;" />
+		<img id="loader" src="/img/loader.gif" />
 		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteTags();" />
 	</div>
 	<% } %>
@@ -53,12 +53,6 @@
 	</div>
 </a>
 
-<script>
-	let tagInput = $("#tagInput");
-	let tags = "<%= locals.tags %>";
-	tags = tags.split(",");
-
-	tagInput.tagsinput("add", "");
-	for (i = 0; i < tags.length; i++) tagInput.tagsinput("add", tags[i]);
-</script>
+<input id="tagscontent" type="hidden" value="<%= locals.tags %>" />
+<script src="/scripts/gallery/tags.js"></script>
 <% include partials/footer %>
