--- a/views/User.ejs
+++ b/views/User.ejs
@@ -25,7 +25,7 @@
 			</a>
 		</div>
 
-		<div id="parameters" class="tab col-xl-9 col-10" style="display: none;">
+		<div id="parameters" class="tab col-xl-9 col-10 nodisplay">
 			<div class="col-md-10 offset-md-1 wrapper">
 				<h1 class="single-title text-center">Account</h1>
 				<div class="alert alert-warning alert-static w-100 mb-3" role="alert">
@@ -180,7 +180,7 @@
 			</div>
 		</div>
 
-		<div id="purchases" class="tab col-xl-9 col-10" style="display: none;">
+		<div id="purchases" class="tab col-xl-9 col-10 nodisplay">
 			<div class="col-md-10 offset-md-1 p-0">
 				<div class="table-responsive">
 					<table class="table table-striped table-hover mb-0">
@@ -212,62 +212,7 @@
 	</div>
 </div>
 
-<script>
-	const csrfToken = document.querySelector("meta[name=\"csrf-token\"]").getAttribute("content");
-	function closeDialog() {
-		if ($("#alert-dialog").length !== 0) {
-			$("#alert-dialog").parent().css("opacity", 0);
-			setTimeout(() => {
-				$("#alert-dialog").parent().remove();
-				$("#alert-dialog").remove();
-			}, 300);
-		}
-		return;
-	}
-
-	function abortAction() {
-		closeDialog();
-		return;
-	}
-
-	async function deleteAcc(userId) {
-		closeDialog();
-
-		let response = await fetch(`/api/user/delete/${userId}`, {
-			method: "POST",
-			headers: {
-				"Content-Type": "application/json",
-				"Accept": "application/json",
-				"CSRF-Token": csrfToken
-			},
-			credentials: "include",
-			mode: "same-origin"
-		});
-		response = await response.json();
-
-		let alertType = "success";
-		if (response.error === true) alertType = "warning";
-
-		let alert = createAlertNode(response.message, alertType);
-		addAlert(alert, "#header");
-		return;
-	}
-
-	function confirmDeletion(userId) {
-		if ($("#alert-dialog").length === 0) {
-			$("body").append(`<div id="alert-dialog" class="alert-dialog"> \
-							<h3><b>DELETE</b> your ACCOUNT</h3><span>This action cannot be reversed</span> \
-							<button class="tab-btn" onclick="deleteAcc('${userId}')">Delete</button><button class="tab-btn" onclick="abortAction()">Abort</button> \
-						</div>`);
-			$("#alert-dialog").wrap('<div onclick="closeDialog()" class="dialog-wrapper"></div>');
-
-			setTimeout(() => {
-				$("#alert-dialog").parent().css("background-color", "rgba(17,17,17, 0.2)");
-				$("#alert-dialog").parent().css("opacity", "1");
-			}, 100);
-		}
-	}
-</script>
+<script src="scripts/user.js"></script>
 <script src="/scripts/menu-arrow.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDviJbyc_hUTWZLprzV0HApjcdBIQHKTpM&libraries=places&callback=initAutocomplete" async defer></script>
 <script src="scripts/auto-complete.js"></script>
