--- a/views/legals.ejs
+++ b/views/legals.ejs
@@ -5,14 +5,14 @@
 		<div class="col-md-10 offset-md-1 content-wrapper p-5">
 			<h1 class="single-title text-center" id="tos">MENTIONS LEGALES</h1>
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des
 				utilisateurs et visiteurs du site : <a href="http://maral.fr" target="_blank">maral.fr</a> les informations suivantes :
 			</p>
 
-			<p style="text-align: justify;"><strong>1. Informations légales :</strong></p>
+			<p class="justify"><strong>1. Informations légales :</strong></p>
 
-			<p style="text-align: justify; text-indent: 0px;">
+			<p class="justify no-indent">
 				Statut du propriétaire : <strong>particulier</strong><br />
 				Le Propriétaire est : <strong>Seyrene Hagiakian </strong><br />
 				Adresse postale du propriétaire : <strong>11 rue jouye-rouve 75020 Paris</strong><br />
@@ -33,7 +33,7 @@
 
 			<strong>2. Présentation et principe :</strong>
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Est désigné ci-après : <strong>Utilisateur</strong>, tout internaute se connectant et utilisant le site susnommé : <a href="http://maral.fr" target="_blank">maral.fr</a>.<br />
 				Le site <strong>maral.fr</strong><strong> </strong>regroupe un ensemble de services, dans l'état,  mis à la disposition des utilisateurs. Il est ici précisé que ces derniers doivent rester
 				courtois et faire preuve de bonne foi tant envers les autres utilisateurs qu'envers le webmaster du site maral.fr. Le site maral.fr est mis à jour régulièrement par Blin Andréas.<br />
@@ -43,7 +43,7 @@
 			</p>
 
 			<strong>3. Accessibilité :</strong>
-			<p style="text-align: justify;">
+			<p class="justify">
 				Le site maral.fr est par principe accessible aux utilisateurs 24/24h, 7/7j, sauf interruption, programmée ou non, pour les besoins de sa maintenance ou en cas de force majeure. En cas
 				d’impossibilité d’accès au service, maral.fr s’engage à faire son maximum afin de rétablir l’accès au service et s’efforcera alors de communiquer préalablement aux utilisateurs les dates et
 				heures de l’intervention.  N’étant soumis qu’à une obligation de moyen, maral.fr ne saurait être tenu pour responsable de tout dommage, quelle qu’en soit la nature, résultant d’une
@@ -51,7 +51,7 @@
 			</p>
 
 			<strong>4. Propriété intellectuelle :</strong>
-			<p style="text-align: justify;">
+			<p class="justify">
 				Seyrene Hagiakian est propriétaire exclusif de tous les droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, tant sur la structure
 				que sur les textes, images, graphismes, logo, icônes, sons, logiciels…<br />
 				Toute reproduction totale ou partielle du site maral.fr, représentation, modification, publication, adaptation totale ou partielle de l'un quelconque de ces éléments, quel que soit le moyen ou
@@ -60,7 +60,7 @@
 			</p>
 
 			<strong>5. Liens hypertextes et cookies :</strong><br />
-			<p style="text-align: justify;">
+			<p class="justify">
 				Le site maral.fr contient un certain nombre de liens hypertextes vers d’autres sites (partenaires, informations …) mis en place avec l’autorisation de Seyrene Hagiakian . Cependant, Seyrene
 				Hagiakian n’a pas la possibilité de vérifier l'ensemble du contenu des sites ainsi visités et décline donc toute responsabilité de ce fait quand aux risques éventuels de contenus illicites.<br />
 				L’utilisateur est informé que lors de ses visites sur le site maral.fr, un ou des cookies sont susceptibles de s’installer automatiquement sur son ordinateur par l'intermédiaire de son
@@ -74,12 +74,12 @@
 
 			<strong>6. Protection des biens et des personnes - gestion des données personnelles :</strong><br />
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978, la loi n° 2004-801 du 6 août 2004, l'article L. 226-13 du Code pénal et la Directive
 				Européenne du 24 octobre 1995.
 			</p>
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Sur le site maral.fr, Seyrene Hagiakian ne collecte des informations personnelles ( suivant l'article 4 loi n°78-17 du 06 janvier 1978) relatives à l'utilisateur que pour le besoin de certains
 				services proposés par le site maral.fr. L'utilisateur fournit ces informations en toute connaissance de cause, notamment lorsqu'il procède par lui-même à leur saisie. Il est alors précisé à
 				l'utilisateur du site maral.fr l’obligation ou non de fournir ces informations.<br />
@@ -89,20 +89,20 @@
 				d’une copie du titre d’identité avec signature du titulaire de la pièce, en précisant l’adresse à laquelle la réponse doit être envoyée.
 			</p>
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Aucune information personnelle de l'utilisateur du site maral.fr n'est publiée à l'insu de l'utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des tiers. Seule
 				l'hypothèse du rachat du site maral.fr et de ses droits autorise Seyrene Hagiakian à transmettre les dites informations à l'éventuel acquéreur qui serait à son tour tenu à la même obligation
 				de conservation et de modification des données vis à vis de l'utilisateur du site maral.fr.<br />
 				Le site maral.fr est en conformité avec le RGPD voir notre politique RGPD  https://maral.fr/legals.
 			</p>
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
 			</p>
 
 			<strong>7. E-mails :</strong><br />
 
-			<p style="text-align: justify;">
+			<p class="justify">
 				Les addresses e-mail collectées lors de la création de compte serviront uniquement dans le but de vous informer sur vos commandes et/ou pour les opérations de récupération et/ou de validation
 				de compte.
 			</p>
