--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -88,27 +88,14 @@
 			</nav>
 		</header>
 
-		<div id="cookies-eu-banner" style="display: none;">
+		<div id="cookies-eu-banner" class="nodisplay">
 			By continuing to visit this site, you accept the use of cookies by <b>Maral.fr</b> so that the website can function normally<br />
 			<button id="cookies-eu-reject">Reject</button>
 			<button id="cookies-eu-accept">Accept</button><br />
 			<a href="/legals#RGPD" id="cookies-eu-more"><b>Read more</b></a>
 		</div>
 		<script src="/scripts/cookies-eu-banner/src/cookies-eu-banner.js"></script>
-		<script>
-			new CookiesEuBanner(function () {
-				// Your code to launch when user accept cookies
-				let response = fetch(`/api/auth/cookies/accept`, {
-					method: "GET",
-					headers: {
-						"Content-Type": "application/json",
-						"Accept": "application/json"
-					},
-					credentials: "include",
-					mode: "same-origin"
-				});
-			}, true);
-		</script>
+		<script src="/scripts/cookies-eu-banner/src/customize.js"></script>
 
 		<% if (messages){ %> <% Object.keys(messages).forEach(function (type) { %> <% messages[type].forEach(function (message) { %>
 		<div id="alert" class="alert alert-<%= type %>" role="alert">
