--- a/views/restricted/Orders.ejs
+++ b/views/restricted/Orders.ejs
@@ -36,7 +36,7 @@
 			</section>
 		</div>
 
-		<div id="all" class="tab col-md-10 offset-md-1" style="display: none;">
+		<div id="all" class="tab col-md-10 offset-md-1 nodisplay">
 			<section class="purchase-section table-responsive">
 				<table class="table table-striped table-hover">
 					<thead>
@@ -64,7 +64,7 @@
 			</section>
 		</div>
 		<div class="col-6 offset-3 mb-3 mt-3">
-			<img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none;" />
+			<img id="loader" src="/img/loader.gif" />
 			<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteOrders('approval');" />
 		</div>
 	</div>
