--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -1,53 +1,53 @@
 <% include ../partials/head %>
 
-<div class="container container-single"> 
-    <div class="single-wrapper">
-      <div class="col-md-10 offset-md-1 wrapper">
-        <h1 class="single-title text-center">Modifier un item de la boutique</h1>
-        <form  id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');"> 
-            <hr />
-            <div class="form-group">
-                <label class="control-label">Titre</label>
-                <input  type="text" name="title" id="title" placeholder="Titre" value="<%= locals.shop.title %>" onkeyup="Validate.String(this, 1, 256);" required>
-                <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
-            </div>
-            
-            <div class="form-group">
-                <label class="control-label">Description</label>
-                <textarea rows="5" id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
-                <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
-            </div>
+<div class="container container-single">
+	<div class="single-wrapper">
+		<div class="col-md-10 offset-md-1 wrapper">
+			<h1 class="single-title text-center">Modifier un item de la boutique</h1>
+			<form id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');">
+				<hr />
+				<div class="form-group">
+					<label class="control-label">Titre</label>
+					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.shop.title %>" onkeyup="Validate.String(this, 1, 256);" required />
+					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+				</div>
 
-            <div class="form-group">
-                <label class="control-label">Prix</label>
-                <input placeholder="35.50 (au centième d'euro près)" type="number" min="1" id="price" name="price" value="<%= locals.shop.price %>" step=".01" required>
-            </div>
+				<div class="form-group">
+					<label class="control-label">Description</label>
+					<textarea rows="5" id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required>
+<%= locals.shop.content %></textarea
+					>
+					<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+				</div>
 
-            <div class="form-group">
-                <div class="form-group text-center">
-                    <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
-                </div>
-                <% if (locals.img) { %>
-                    <% locals.img.forEach(function (item) { %>
-                        <img class="w-100 m-1" id="<%= item._id %>" src="/api/image/<%= item._id %>">
-                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
-                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
-                        </div>
-                    <% }) %>
-                <% } %>
-            </div>
-        
-            <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-            <input type="submit" class="logbtn" value="Mettre à jour" id="submit-shop">
-        </form>
-        <form class="mt-3" method="POST" action="/api/shop/delete/<%= locals.shop._id %>">
-            <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-            <input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-shop">
-        </form>
-    </div>
-    </div>
+				<div class="form-group">
+					<label class="control-label">Prix</label>
+					<input placeholder="35.50 (au centième d'euro près)" type="number" min="1" id="price" name="price" value="<%= locals.shop.price %>" step=".01" required />
+				</div>
+
+				<div class="form-group">
+					<div class="form-group text-center">
+						<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+						<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple />
+					</div>
+					<% if (locals.img) { %> <% locals.img.forEach(function (item) { %>
+					<img class="w-100 m-1" id="<%= item._id %>" src="/api/image/<%= item._id %>" />
+					<div id="actDiv<%= item._id %>" class="action-div <% if (item.isMain === true) { %> nodisplay<% } %>">
+						<a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
+						<a id="sel<%= item._id %>" onclick="setMain(event, this);" href="/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+					</div>
+					<% }) %> <% } %>
+				</div>
+
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" class="logbtn" value="Mettre à jour" id="submit-shop" />
+			</form>
+			<form class="mt-3" method="POST" action="/api/shop/delete/<%= locals.shop._id %>">
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-shop" />
+			</form>
+		</div>
+	</div>
 </div>
 <script src="/scripts/shop/shopScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
