--- a/views/User.ejs
+++ b/views/User.ejs
@@ -212,9 +212,9 @@
 	</div>
 </div>
 
-<script src="scripts/user.js"></script>
+<script src="/scripts/user.js"></script>
 <script src="/scripts/menu-arrow.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDviJbyc_hUTWZLprzV0HApjcdBIQHKTpM&libraries=places&callback=initAutocomplete" async defer></script>
-<script src="scripts/auto-complete.js"></script>
-<script src="/scripts/frontValidation.js"></script>
+<script src="/scripts/core/auto-complete.js"></script>
+<script src="/scripts/core/frontValidation.js"></script>
 <% include partials/footer %>
