--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,5 +58,5 @@
   </div>
 </a>
 
-<script src="/scripts/carousel-cycle.js"></script>
+<script src="/scripts/core/carousel-cycle.js"></script>
 <% include partials/footer %>
