--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -24,12 +24,15 @@
 		<!-- CUSTOM -->
 		<link rel="stylesheet" href="/style.css" />
 		<!-- Quill RTE -->
-		<link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet" />
+		<script src="https://cdn.quilljs.com/1.3.7/quill.core.js"></script>
 		<script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
 
-		<script src="/scripts/errorMessages.js"></script>
-		<script src="/scripts/tools.js"></script>
-		<script src="/scripts/alert.js"></script>
+		<link rel="stylesheet" href="https://cdn.quilljs.com/1.3.4/quill.snow.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.4/quill.core.css" />
+
+		<script src="/scripts/core/errorMessages.js"></script>
+		<script src="/scripts/core/tools.js"></script>
+		<script src="/scripts/core/alert.js"></script>
 	</head>
 
 	<body>
@@ -107,4 +110,4 @@
 		<% }) %> <% }) %> <% } %>
 	</body>
 </html>
-<script src="/scripts/navbar.js"></script>
+<script src="/scripts/core/navbar.js"></script>
