--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -15,7 +15,7 @@
 			</div>
 
 			<div class="blog-content col-md-10 offset-md-1">
-				<div class="col-md-10 offset-md-1" id="content-holder"></div>
+				<div class="col-md-10 offset-md-1 ql-editor" id="content-holder"></div>
 			</div>
 		</div>
 	</div>
@@ -28,27 +28,7 @@
 	</div>
 </a>
 
-<script>
-	let toAppend = "<%= locals.blog.content %>";
-	let contentHolder = document.getElementById("content-holder");
-
-	toAppend = toAppend
-		.replace(/(\r\n|\n|\r)/gm, "")
-		.replace(/&#34;/g, '"')
-		.replace(/&lt;/g, "<")
-		.replace(/&gt;/g, ">");
-	contentHolder.innerHTML = toAppend;
-
-	contentHolder.querySelectorAll("img").forEach(item => {
-		item.setAttribute("onclick", "expand(this)");
-
-		let link = document.createElement("a");
-		link.innerHTML = item.outerHTML;
-		link.setAttribute("href", "#expand");
-
-		item.parentNode.insertBefore(link, item);
-		item.remove();
-	});
-</script>
-<script src="/scripts/carousel-cycle.js"></script>
+<input type="hidden" value="<%= locals.blog.content %>" id="blogContent" />
+<script src="/scripts/blog/quill.js"></script>
+<script src="/scripts/core/carousel-cycle.js"></script>
 <% include ../partials/footer %>
