--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -26,6 +26,10 @@ http {
 	#Must read the body in 5 seconds.
 	client_body_timeout 5;
 
+	upstream backend {
+		server http://maral.herokuapp.com
+	}
+
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
  	}
