heroku nginx push

--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -36,7 +36,7 @@ http {
 
 	server {
 		listen <%= ENV["PORT"] %>;
-		server_name _;
+		server_name http://maral.herokuapp.com;
 		keepalive_timeout 5;
 
 		location / {
