--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -39,11 +39,17 @@ http {
 		server_name http://maral.herokuapp.com;
 		keepalive_timeout 5;
 
-		location / {
+		location @backend {
+			proxy_pass http://backend;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header Host $host;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header Host $http_host;
-			proxy_redirect off;
-			proxy_pass "http://app_server";
+			# Following is necessary for Websocket support
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+
+			
 		}
 
 		root "/app/public"; # path to your app
