--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -39,8 +39,8 @@ http {
 		server_name http://maral.herokuapp.com;
 		keepalive_timeout 5;
 
-		location @backend {
-			proxy_pass http://backend;
+		location @app_server {
+			proxy_pass http://app_server;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header Host $host;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
