--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -29,7 +29,13 @@ http {
 
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
- 	}
+	 }
+	 
+	root "/"; # path to your app
+
+	location / {
+		try_files $uri @app_server;
+	}
 
 	server {
 		listen <%= ENV["PORT"] %>;
@@ -49,6 +55,6 @@ http {
 			
 		}
 
-		root "/app/public"; # path to your app
+
 	}
 }
