--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -26,6 +26,10 @@ http {
 	#Must read the body in 5 seconds.
 	client_body_timeout 5;
 
+	
+	upstream backend {
+		server http://maral.herokuapp.com
+	}
 
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
@@ -42,7 +46,7 @@ http {
 		server_name http://maral.herokuapp.com;
 		keepalive_timeout 5;
 
-		location @app_server {
+		location @backend {
 			proxy_pass http://app_server;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header Host $host;
