--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -31,7 +31,7 @@ http {
 		server unix:/tmp/nginx.socket fail_timeout=0;
 	 }
 	 
-	root "/public"; # path to your app
+	root "/app/public"; # path to your app
 
 	location / {
 		try_files $uri @app_server;
