--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -27,11 +27,19 @@ http {
 	client_body_timeout 5;
 
 	
+	location "/public" {
+		alias "/app/public";
+		gzip_static on;
+		expires max;
+		add_header Cache-Control public
+	 }
+
+
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
 	 }
 	 
-	root /app/public; # path to your app
+	root "/app/public"; # path to your app
 
 	location / {
 		try_files $uri @app_server;
@@ -44,6 +52,7 @@ http {
 
 		location / {
 			proxy_pass http://app_server;
+
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header Host $host;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
