--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -27,8 +27,8 @@ http {
 	client_body_timeout 5;
 
 	
-	location "/public" {
-		alias "/app/public";
+	location /public {
+		alias /app/public;
 		gzip_static on;
 		expires max;
 		add_header Cache-Control public
@@ -39,7 +39,7 @@ http {
 		server unix:/tmp/nginx.socket fail_timeout=0;
 	 }
 	 
-	root "/app/public"; # path to your app
+	root /app/public; # path to your app
 
 	location / {
 		try_files $uri @app_server;
