--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -25,7 +25,7 @@ http {
 	log_format  main  	'$remote_addr - $remote_user [$time_local] "$request" '
                     	'$status $body_bytes_sent "$http_referer" '
                     	'"$http_user_agent" "$http_x_forwarded_for"';
-	access_log <%= ENV['NGINX_ACCESS_LOG_PATH'] || 'logs/nginx/access.log' %> l2met;
+	access_log <%= ENV['NGINX_ACCESS_LOG_PATH'] || 'logs/nginx/access.log' %> main;
 	error_log <%= ENV['NGINX_ERROR_LOG_PATH'] || 'logs/nginx/error.log' %>;
 
 
