--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -43,7 +43,7 @@ http {
 		root /public; 
 
 
-		location / {
+		location /public {
 			#try_files $uri @app_server;
 			try_files  $uri $uri/ =404;
 			gzip on;
