--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -40,7 +40,7 @@ http {
 		listen <%= ENV["PORT"] %>;
 		server_name maral.herokuapp.com www.maral.herokuapp.com;
 		keepalive_timeout 5;
-		root /public; 
+		root /app; 
 
 
 		location /public {
