--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -31,9 +31,9 @@ http {
 
 
 	
-	#upstream app_server {
-	#	server unix:/tmp/nginx.socket fail_timeout=0;
-	#}
+	upstream app_server {
+		server unix:/tmp/nginx.socket fail_timeout=0;
+	}
 
 	server {
 		listen <%= ENV["PORT"] %>;
@@ -41,11 +41,16 @@ http {
 		keepalive_timeout 5;
 		root /app; ##
 
-		location / { ##
+		location /public { ##
 			#try_files $uri @app_server;
 			try_files  $uri $uri/ =404;
 			gzip on;
 			gzip_types application/javascript image/* text/css;
+			sendfile on;
+			sendfile_max_chunk 1m;
+			tcp_nopush on;
+			tcp_nodelay       on;
+    		keepalive_timeout 65;
 			
 			#proxy_pass http://app_server;
 			#proxy_set_header X-Real-IP $remote_addr;
@@ -55,6 +60,10 @@ http {
 			#proxy_http_version 1.1;
 			#proxy_set_header Upgrade $http_upgrade;
 			#proxy_set_header Connection "upgrade";
+		}
+
+		location @app_server {
+			proxy_pass http://app_server;
 		}
 
 		## location /api
